# G.Commune

./: README.md
commune/.trunk/: trunk.yaml
commune/commune/client/: Cargo.toml  client.py
commune/commune/client/http/: client_http.py  setup.py
commune/commune/client/http/rust_http_module/src/: main.rs
commune/commune/client/src/: lib.rs
commune/commune/module/: module.py
commune/commune/modules/bittensor/neurons/text/prompting/miners/AI21/: neuron.py
commune/commune/modules/bittensor/utils/: register_cuda.py
commune/commune/modules/pm2/: Cargo.toml  pm2.md
commune/commune/modules/pm2/src/: lib.rs
commune/commune/modules/server/http/: Cargo.toml  server_http.md  server_http.py
commune/commune/modules/server/http/src/: lib.rs
commune/commune/modules/vali/: Cargo.toml  vali.py  vali_rust.md
commune/commune/modules/vali/parity/: Cargo.toml
commune/commune/modules/vali/parity/src/: lib.rs
commune/commune/modules/vali/src/: lib.rs
commune/commune/modules/vali/text/math/: Cargo.toml
commune/commune/modules/vali/text/math/src/: lib.rs
commune/commune/modules/vali/text/mmlu/: Cargo.toml
commune/commune/modules/vali/text/mmlu/src/: lib.rs
commune/commune/modules/vali/text/realfake/: Cargo.toml
commune/commune/modules/vali/text/realfake/src/: lib.rs
commune/commune/modules/vali/text/truthqa/: Cargo.toml
commune/commune/modules/vali/text/truthqa/src/: lib.rs
commune/commune/modules/vali/watchdog/: Cargo.toml
commune/commune/modules/vali/watchdog/src/: lib.rs
(+16 files in other folders)
