[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "My_module"
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.24"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pyo3 = { version = "0.15", features = ["extension-module"] }
pyo3-asyncio = { version = "0.14", features = ["attributes", "async-std-runtime"] }
async-std = "1.9"